get rid of table border to avoid useless vert scrollbar. Add some space around button. Use default (grey) color.

--- a/jqm-all/jqm-ws/src/main/webapp/css/app.css
+++ b/jqm-all/jqm-ws/src/main/webapp/css/app.css
@@ -8,12 +8,6 @@ html,body {
 	cursor: pointer;
 }
 
-.gridClass {
-	border: 1px solid rgb(212, 212, 212);
-	/*width: 900px;
-	height: 540px;*/
-}
-
 .form-horizontal .control-group,.form-horizontal .form-group {
 	margin-bottom: 1px;
 }
